# Optic_ray

./: .gitattributes  .gitignore  AGENTS.md  CODEX_MASTER_PROMPT.md  HANDOFF.md  README.md  TASKS.md  pyproject.toml  requirements.txt
assets/: README.md
assets/measurements/: README.md  measurement_metadata.example.yaml
catalog/: README.md
configs/: README.md  baseline_1550nm.yaml  line_beam_project.example.yaml  project.yaml
docs/: ARCHITECTURE.md  BEAM_MODEL.md  LENS_CATALOG_FORMAT.md  MULTI_PC_WORKFLOW.md  OPTICAL_SYSTEM_MODEL.md  PHYSICS_MODEL.md  PROJECT_VISION.md  SCANNER_DYNAMICS_MODEL.md  SPECKLE_MODEL.md  UI_SIMULATION_DASHBOARD.md  USER_MANUAL.md  VALIDATION_PLAN.md
schemas/: README.md  common.schema.json  component.schema.json  experiment.schema.json  material.schema.json  measurement.schema.json  phase0_report.schema.json  phase1_beam_report.schema.json  phase1_beam_summary.schema.json  phase2_optical_train_report.schema.json  phase3_ideal_scanner_line_path.schema.json  phase3_static_scanner_angle_sweep.schema.json  project.schema.json  scenario.schema.json  stl_metadata.schema.json  viewport_scene.schema.json
tests/: conftest.py  test_assets.py  test_cli.py  test_gaussian_beam.py  test_optical_train.py  test_placement.py  test_placement_editor.py  test_project_loader.py  test_reports.py  test_scanner_path.py  test_scanner_sweep.py  test_scene_receiver.py  test_simulation_variant.py  test_streamlit_app.py  test_transform.py  test_ui_app.py  test_ui_assembly_interactive.py  test_ui_runner.py  test_ui_workspace.py  test_units.py  test_visualization.py
(+88 files in other folders)
