[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optic-ray-sim"
version = "0.1.0"
description = "Configurable optical beam, scanner, and receiver-return simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6,<7",
  "jsonschema>=4,<5",
  "matplotlib>=3.9,<4",
  "numpy>=2,<3",
  "pint>=0.24,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
ui = [
  "plotly>=6,<7",
  "streamlit>=1.59,<2",
]

[project.scripts]
lidarsim = "lidarsim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
